--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Spinner</string>
     <string name="send">Wyślij wiadomosc</string>
     <string name="Msg_text">Msg:</string>
+    <string name="title_activity_receive_message">titleActivityReceiveMessage</string>
 </resources>
