getting string to put it as a window title using intent onSendMessage() of MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="send">Wyślij wiadomosc</string>
     <string name="Msg_text">Msg:</string>
     <string name="title_activity_receive_message">titleActivityReceiveMessage</string>
+    <string name="chooser">Wysyłanie wiadomości....</string>
 </resources>
